Backend url path uupdate

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uz">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Postgrestorge</title>
+    
+    <title>PostgresTorge | Ma'lumotlar bazasini boshqarish</title>
+    <meta name="description" content="Neon DB va Node.js yordamida ma'lumotlar bazasini oson boshqarish." />
+    <meta name="keywords" content="PostgreSQL, Neon DB, Node.js, PostgresTorge" />
+
+    <meta property="og:title" content="PostgresTorge" />
+    <meta property="og:description" content="Zamonaviy bazalar boshqaruvi." />
+    <meta property="og:image" content="/share-image.jpg" />
+
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
   <body>
     <div id="root"></div>
