Navbar, CartPage Admin page, login page responsivee

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>PostgresTorge | Ma'lumotlar bazasini boshqarish</title>
+    <title>Oybek Market</title>
     <meta name="description" content="Neon DB va Node.js yordamida ma'lumotlar bazasini oson boshqarish." />
     <meta name="keywords" content="PostgreSQL, Neon DB, Node.js, PostgresTorge" />
-
-    <meta property="og:title" content="PostgresTorge" />
+    <meta property="og:title" content="Postgrestorge" />
     <meta property="og:description" content="Zamonaviy bazalar boshqaruvi." />
     <meta property="og:image" content="/share-image.jpg" />
 
