admin order page fixed!

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Oybek Market</title>
     <meta name="description" content="Neon DB va Node.js yordamida ma'lumotlar bazasini oson boshqarish." />
     <meta name="keywords" content="PostgreSQL, Neon DB, Node.js, PostgresTorge" />
-    <meta property="og:title" content="Postgrestorge" />
+    <meta property="og:title" content="Oybek market" />
     <meta property="og:description" content="Zamonaviy bazalar boshqaruvi." />
     <meta property="og:image" content="/share-image.jpg" />
 
